// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root css-g6y2kw-StyledHeader e1xfuyqk0 css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-naac46-StyledMedia e1r97lfn0 css-o69gx8-MuiCardMedia-root"
      role="img"
    />
    <div
      class="MuiCardContent-root HvCard-Content-content css-1dwieqk-StyledContent e12hctsi0 css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-ivbjlp-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <div
      class="MuiCardContent-root HvCard-Content-content css-1dwieqk-StyledContent e12hctsi0 css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-ivbjlp-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root css-g6y2kw-StyledHeader e1xfuyqk0 css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-naac46-StyledMedia e1r97lfn0 css-o69gx8-MuiCardMedia-root"
      role="img"
    />
  </div>
</div>
`;
